OpenRewrite UpgradeToJava21